--- a/styles/architects.css
+++ b/styles/architects.css
@@ -7,3 +7,102 @@
   font-weight:400;
   font-style: normal;
 }
+
+
+/* Shared styles */
+
+
+
+.display-flex{
+    display: flex;
+}
+
+/* dark-02 */
+.text-gray{
+    color: #424242;
+}
+/* dark-03 */
+.text-light-gay{
+    color: #727272;
+}
+
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+
+.btn-primary{
+    background-color: #FF900E ;
+    color: #FFFFFF;
+    padding: 20px 25px;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    border: none;
+}
+
+
+
+/* Header styles */
+
+
+/* navbar related styles */
+
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+
+.brand{
+    font-weight: 700;
+    /* 1rem = 16px */
+    font-size: 3rem;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* Banner Related Styles */
+
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-description{
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.banner-image{
+    width: 100%;
+}
+
+
+
+/* Responsive Media Query */
+
+@media screen and (max-width: 576px){
+    .navbar, .nav-links{
+        flex-direction: column;
+
+    }
+}
