features section added complete with proper html and css code, and make this part responsive for small devices

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -25,6 +25,9 @@
 .text-light-gay{
     color: #727272;
 }
+.text-primary{
+    color: #FF900E;
+}
 
 
 .bg-light{
@@ -42,7 +45,14 @@
     border: none;
 }
 
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
 
+main > section{
+    margin-top: 130px;
+}
 
 /* Header styles */
 
@@ -96,13 +106,43 @@
     width: 100%;
 }
 
+/* Team and Features related styles */
 
+.teams{
+    align-items: center;
+}
+.team-image-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+.feature-title{
+    font-size: 3rem;
+    font-weight: 700;
+}
+#quick-list{
+    font-weight: 500;
+}
 
 /* Responsive Media Query */
 
 @media screen and (max-width: 576px){
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links,
+    .teams
+    {
         flex-direction: column;
 
+    }
+    .team-image-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+       margin-left: 20px;
     }
 }
