--- a/styles/architects.css
+++ b/styles/architects.css
@@ -240,6 +240,29 @@ main>section {
 .sponsor-companies img{
         filter: grayscale(100%);
     }
+
+    /* Footer related styles */
+
+    footer{
+       
+    }
+    .footer-container{
+        max-width: 1440px ;
+        height: 100px;
+        margin: 150px auto;
+        background-color: #FFF4E7;
+       justify-content: center;
+        align-items: center;
+        
+    }
+    .footer-title{
+       
+      
+        border-radius: 8px;
+        font-size: 1.25rem;
+        font-weight: 400;
+
+    }
 /* Responsive Media Query */
 
 @media screen and (max-width: 576px) {
@@ -247,7 +270,8 @@ main>section {
     .navbar,
     .nav-links,
     .teams,
-    .features {
+    .features,
+    .footer-container {
         flex-direction: column;
 
     }
